# v0-saa-s-empresarial-completo

./: .gitignore  .jr-orchestrator-state.json  AGENTS.md  CHANGES.md  CLAUDE.md  README.md  edge_logs.txt  get_keys.js  implementacion-a-futuro.txt  modelo-dominio-aliadata-v2.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  start_error.txt  supabase_status.json  sync_env.js  temp-test-ai.sql  temp-test-analytics-seed.sql  temp-test-community.sql  temp-test-insert.sql  tsconfig.tsbuildinfo  vercel.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/core/: auth.py  config.py  database.py  deps.py  errors.py  guards.py  redis_client.py  ws_manager.py
backend/repositories/: bank_account_repository.py  base.py  billing_repository.py  branch_repository.py  cash_session_repository.py  cashbox_repository.py  client_repository.py  cost_center_repository.py  customer_account_repository.py  expense_repository.py  fiscal_document_repository.py  fiscal_profile_repository.py  journal_entry_repository.py  organization_repository.py  outbox_repository.py  point_of_sale_repository.py  product_repository.py  purchase_repository.py  quote_repository.py  sales_order_repository.py  sales_repository.py  stock_repository.py  supplier_account_repository.py
backend/routers/: bank_accounts.py  branches.py  cash.py  clients.py  cost_centers.py  customer_accounts.py  expenses.py  fiscal.py  health.py  journal_entries.py  organizations.py  outbox.py  payments.py  products.py  purchases.py  quotes.py  sales.py  (+4 more)
(+1120 files in other folders)
