[project]
name = "emprende-smart-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "redis>=5.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "asyncpg-stubs>=0.29",
]

[tool.setuptools.packages.find]
where = [".."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests de integración contra servicios externos (excluidos del gate de CI; correr con -m integration)",
]
